feat: final version

--- a/nbaTracker/requirements.txt
+++ b/nbaTracker/requirements.txt
@@ -1,6 +1,14 @@
-Django==3.2.8
-django-utils==0.0.2
+
+beautifulsoup4==4.10.0
+
+Django==2.2.5
+django-rest-swagger
 djangorestframework==3.13.1
-django-cors-headers==3.10.1
-django-rest-swagger==2.2.0
-sqlparse==0.2.4
+django-cors-headers==3.0.1
+
+django-filter
+django-utils
+django-nose
+
+Whoosh
+selenium
